fixed overlaping of info tab and map icon, and changed name in lab complex

--- a/css/nav.css
+++ b/css/nav.css
@@ -235,7 +235,7 @@
 
     .dropdown-menu.show, 
     .dropdown-menu-last.show {
-        max-height: 250px; 
+        max-height: 160px; 
         overflow-y: auto;
         opacity: 1;
         visibility: visible;
